--- a/index.html
+++ b/index.html
@@ -1,32 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="Auther" content="HD Roberson Jr.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta charset="UTF-8">
+<meta name="Author" content="HD Roberson Jr.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!-- Bootstrap CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+<link rel="stylesheet" href="style.css">
+<!-- Internal CSS -->
+<link rel="stylesheet" href="style.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+<title>FSDI-201-Lab1</title>
 
-    <link rel="stylesheet" href="styles.css">
-
-    <title>FSDI-201 Session 1 Lab</title>
 </head>
 <body>
-    <header>
-        <h1>Learning JavaScript</h1>
-        <p>By HD Roberson Jr.</p>
-    </header>
-    <div class="container">
-        <h3>Shopping Cart</h3>
 
+    <div class="alert alert-secondary">
+        <h4 class="alert-heading">Some JavaScript</h4>
+        <p>By HD Roberson Jr.</p>
+    </div>
+   
+    <table class="table table-light">
+        <thead class="thead-light">
+            <tr>
+                <th>Item</th>
+                <th>Price</th>
+                <th>Qty</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a class="add-to-cart" href="#" data-name="Snickers" >Snickers</a></td>
+                <td><a class="add-to-cart" href="#" data-price="1.25" >$1.25</a></td>
+                <td><a class="add-to-cart" href="#" >1</a></td>
+                <td><button onclick="addItemToCart()" id="add-button" class="btn btn-primary" type="button">Add</button></td>
+            </tr>
+            <tr>
+                <td><a class="add-to-cart" href="#" data-name="Kisses" >Kisses</a></td>
+                <td><a class="add-to-cart" href="#" data-price="1.00" >$1.00</a></td>
+                <td><a class="add-to-cart" href="#" >1</a></td>
+                <td><button id="add-button" class="btn btn-primary" type="button">Add</button></td>
+            </tr>
+            <tr>
+                <td><a class="add-to-cart" href="#" data-name="Payday" >Payday</a></td>
+                <td><a class="add-to-cart" href="#" data-price="1.15" >$1.15</a></td>
+                <td><a class="add-to-cart" href="#" >1</a></td>
+                <td><button id="add-button" class="btn btn-primary" type="button">Add</button></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th><button onclick="clearCart()" id="clear-cart" class="btn btn-danger" type="button">Clear Cart</button></th>
+            </tr>
+        </tfoot>
+    </table>
+
+    <div id="cart-display">
+        <h3>Your Cart</h3>
+        <ul id="show-cart">
+            <!-- -->
+        </ul>
     </div>
 
-    <footer>
-        <div class="footer">
-            &copy;&nbsp;2019
-        </div>
-    </footer>
+
+
+
+
+
+
+
 <script src="main.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 </html>
